# ChangeLog for net-misc/snitch
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/snitch/ChangeLog,v 1.8 2007/02/09 04:52:20 flameeyes Exp $

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  18 Jul 2004; Daniel Black <dragonheart@gentoo.org> snitch-0.0.1.ebuild:
  x86 stable

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> snitch-0.0.1.ebuild:
  change virtual/glibc to virtual/libc

  11 May 2004; Daniel Black <dragonheart@gentoo.org> :
  Added sys-apps/iproute2 depandancy at caglar.onur@tubitak.gov.tr's request

  10 May 2004; David Holm <dholm@gentoo.org> snitch-0.0.1.ebuild:
  Added to ~ppc.

*snitch-0.0.1 (10 May 2004)

  10 May 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +snitch-0.0.1.ebuild:
  Initial import. Bug #50462 thanks to S.Caglar Onur <caglar.onur@tubitak.gov.tr>
