@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/snitch
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/snitch/ChangeLog,v 1.8 2007/02/09 04:52:20 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/snitch/ChangeLog,v 1.9 2007/07/02 15:06:04 peper Exp $
+
+  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> snitch-0.0.1.ebuild:
+  (QA) RESTRICT clean up.
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
